<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kiesi</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="pass">Salasana</string>
    <string name="username">Käyttäjätunnus</string>
    <string name="btnLogin">Kirjaudu Sisään</string>
    <string name="nimi">Auton nimi</string>
    <string name="valmistaja">Valmistaja</string>
    <string name="malli">Malli</string>
    <string name="moottori">Moottori</string>
    <string name="vuosi">Vuosimalli</string>
    <string name="kulutus">Kulutus</string>
    <string name="date">Osto Pvm</string>
    <string name="Pvm">Pvm</string>
    <string name="hinta">Hinta</string>
    <string name="kilometritOsto">Km ostohet.</string>
    <string name="kilometrit">Kilometrit</string>
    <string name="maintenance">Huolto</string>
    <string name="repair">Korjaus</string>
    <string name="refill">Tankkaus</string>
    <string name="insurance">Vakuutus</string>
    <string name="Katsastusasema">Katsastus asema</string>
    <string name="repairTarget">Korjauksen kohde</string>
    <string name="Notes">Huomatukset ja korjaus ehdotukset</string>
    <string name="insuranceType">Vakuutustyyppi</string>
    <string name="insuranceCompany">Vakuutus yhtiö</string>
     <string name="maintenanceTarget">Huollon kohde</string>
    <string name="litrat">Litrat</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
     <string name="add">+</string>
    <string name="remove">x</string>
	<string name="Poista">Poista</string>
	<string name="Muokkaa">Muokkaa</string>
	<string name="Kulut">Kulut</string>
</resources>
