<?xml version="1.0" encoding="utf-8"?>
    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nimi"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/editName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxWidth="50dp"
                android:width="50dp" >

                <requestFocus />
            </EditText>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/valmistaja"
                android:textAppearance="?android:attr/textAppearanceLarge" />

			 <EditText
			     android:id="@+id/editValmistaja"
			     android:layout_width="wrap_content"
			     android:layout_height="wrap_content"
			     android:ems="10"
			     android:inputType="text" >
             
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/malli"
                android:textAppearance="?android:attr/textAppearanceLarge" />

				<EditText
				    android:id="@+id/editMalli"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:ems="10"
				    android:inputType="text" >
             
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moottori"
                android:textAppearance="?android:attr/textAppearanceLarge" />

				<EditText
				    android:id="@+id/editMoottori"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:ems="10"
				    android:inputType="text" >
             
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vuosi"
                android:textAppearance="?android:attr/textAppearanceLarge" />

				<EditText
				    android:id="@+id/editVuosi"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:ems="10"
				    android:inputType="number" >
             
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kulutus"
                android:textAppearance="?android:attr/textAppearanceLarge" />

				<EditText
				    android:id="@+id/editKulutus"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:ems="10"
				    android:inputType="numberDecimal" >
             
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/editDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date" />

        </TableRow>

                <TableRow
            android:id="@+id/tableRow8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hinta"
                android:textAppearance="?android:attr/textAppearanceLarge" />

				<EditText
				    android:id="@+id/editHinta"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:ems="10"
				    android:inputType="numberDecimal" >
             
            </EditText>
        </TableRow>

                <TableRow
            android:id="@+id/tableRow9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kilometrit"
                android:textAppearance="?android:attr/textAppearanceLarge" />

				<EditText
				    android:id="@+id/editKilometrit"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:ems="10"
				    android:inputType="number" >
             
            </EditText>

        </TableRow>

                <include
                    android:id="@+id/buttonbarContainer"
                    layout="@layout/buttonbar" />

    </TableLayout>
