<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lay"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/carName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:onClick="onCarNameClick"
        android:text="Auton nimi"
        android:textSize="22sp" />

    <View
        android:id="@+id/spacerLine"
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/carName"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:paddingTop="5dip" />

    <include
        android:id="@+id/buttonbarContainer"
        android:layout_alignParentLeft="true"
        layout="@layout/buttonbar" />


    <Button
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:text="@string/maintenance"
        android:onClick="maintenance_onClick"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:text="@string/insurance"
        android:onClick="insurance_onClick"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/refill"
        android:onClick="refill_onClick"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:text="@string/repair"
        android:onClick="repair_onClick"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="31dp"
        android:onClick="inspection_onClick"
        android:text="@string/inspection"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>